[project]
name = "hello-playdataJuhanKim"
version = "0.3.0"
description = "The python program I'm disributing for the first time"
authors = [
    {name = "oneuse", email = "joohan754@naver.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
]
